--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,15 @@
         <artifactId>urlrewritefilter</artifactId>
         <version>4.0.3</version>
     </dependency>
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
+            <version>3.2.15.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
